--- a/.choreo/endpoints.yaml
+++ b/.choreo/endpoints.yaml
@@ -4,7 +4,7 @@ version: 0.1
 # +required List of endpoints to create
 endpoints:
   # +required Unique name for the endpoint. (This name will be used when generating the managed API)
-- name: Greeting 9090
+- name: Product Catalog
   # +required Numeric port value that gets exposed via this endpoint
   port: 9090
   # +required Type of the traffic this endpoint is accepting. Example: REST, GraphQL, etc.
@@ -19,3 +19,4 @@ endpoints:
   # +optional Path to the schema definition file. Defaults to wild card route if not provided
   # This is only applicable to REST endpoint types.
   # The path should be relative to the docker context.
+  schemaFilePath:  openapi.yaml
