--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
-    "jwks-rsa": "^3.0.1"
+    "jwks-rsa": "^3.0.1",
+    "qs": "^6.11.2"
   }
 }
